# moe-graphics

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/: Module.hpp
include/Audio/: AudioBuffer.hpp  AudioCommand.hpp  AudioDataProvider.hpp  AudioEngine.hpp  AudioListener.hpp  AudioSource.hpp  Common.hpp  StreamedOggProvider.hpp
include/Core/: App.hpp  Common.hpp  Config.hpp  Dirty.hpp  Expected.hpp  FileReader.hpp  Input.hpp  Logger.hpp  Ref.hpp  RefCounted.hpp  ResourceCache.hpp  Sync.hpp  Window.hpp
include/Core/Meta/: Feature.hpp  Generator.hpp  RefCounted.hpp  TypeTraits.hpp  Util.hpp
include/Core/Resource/: BinaryBuffer.hpp  BinaryLoader.hpp  Cached.hpp  Image.hpp  ImageLoader.hpp  Launch.hpp  Lazy.hpp  OrDefault.hpp  Preload.hpp  Secure.hpp  Test.hpp
include/Core/Signal/: Common.hpp  Connection.hpp  Signal.hpp  Slot.hpp
include/Core/Task/: Future.hpp  Scheduler.hpp  Utils.hpp
include/Math/: Color.hpp  Common.hpp  Rect.hpp  Transform.hpp  Util.hpp
include/Physics/: GltfColliderFactory.hpp  JoltIncludes.hpp
include/Render/: Common.hpp
include/Render/Vulkan/: VulkanAnimationCache.hpp  VulkanBindlessSet.hpp  VulkanCacheUtils.hpp  VulkanCamera.hpp  VulkanContext.hpp  VulkanDescriptors.hpp  VulkanEngine.hpp  VulkanEngineDrivers.hpp  VulkanExpandableBuffer.hpp  VulkanFont.hpp  VulkanGPUMesh.hpp  VulkanIdTypes.hpp  VulkanIm3dDriver.hpp  VulkanImageCache.hpp  VulkanInitializers.hpp  VulkanLight.hpp  VulkanLoaders.hpp  VulkanMaterial.hpp  VulkanMaterialCache.hpp  VulkanMesh.hpp  VulkanMeshCache.hpp  VulkanMeshDrawCommand.hpp  VulkanObjectCache.hpp  VulkanPipeline.hpp  VulkanPostFXGraph.hpp  VulkanRenderServer.hpp  VulkanRenderTarget.hpp  VulkanRenderable.hpp  VulkanScene.hpp  VulkanSkeleton.hpp  VulkanSprite.hpp  VulkanSwapBuffer.hpp  VulkanSwapchain.hpp  VulkanSwapchainRenderTarget.hpp  VulkanTypes.hpp  VulkanUtils.hpp
include/UI/: BoxWidget.hpp  Common.hpp  SpriteWidget.hpp  TextWidget.hpp  Widget.hpp
shaders/: csm_depth.frag  deferred_lighting.vert  gamma_correct.frag  gbuffer.frag  light.glsl  material.glsl  pbr_forward.glsl  skybox.frag  sprite.vert
shaders/glsl/: csm_depth.frag  fxaa.vert  gbuffer.vert  mesh.frag  mesh_toon.frag  skybox.vert  sprite.frag
shaders/glsl/im3d/: line.frag  line.geom  line.vert  pcs.glsl  point.frag  point.vert
shaders/im3d/: LICENSE  compile.bat  triangle.frag  triangle.vert
shaders/slang/: compile_shaders.py  csm_depth.slang  deferred_lighting.slang  fxaa.slang  gamma_correct.frag.slang  gamma_correct.slang  gamma_correct.vert.slang  gbuffer.slang  gen_commands.py  light.slang  pbr_forward.slang  shaders.json  skinning.comp.slang  skinning.slang  sprite.slang  vertex.slang
shaders/slang/im3d/: line.slang  point.slang  triangle.slang
shaders/slang/moe/: common.slang  im3d_common.slang  material.slang  pbr_lighting.slang  sampler.slang  scene_data.slang
src/Audio/: AudioBuffer.cpp  AudioEngine.cpp  AudioListener.cpp  AudioSource.cpp  StreamedOggProvider.cpp
src/Core/: App.cpp  Config.cpp  FileReader.cpp  Logger.cpp  Window.cpp
src/Core/Resource/: ImageLoader.cpp
src/Core/Task/: Scheduler.cpp
src/Math/: Color.cpp  Common.cpp  Transform.cpp
src/Physics/: GltfColliderFactory.cpp
src/Render/OpenGL/: README.md
src/Render/Vulkan/: VulkanBindlessSet.cpp  VulkanContext.cpp  VulkanDescriptors.cpp  VulkanEngine.cpp  VulkanEngineDrivers.cpp  VulkanExpandableBuffer.cpp  VulkanFont.cpp  VulkanIm3dDriver.cpp  VulkanImageCache.cpp  VulkanInitializers.cpp  VulkanLoaders.cpp  VulkanMaterialCache.cpp  VulkanMeshCache.cpp  VulkanPipeline.cpp  VulkanPostFXGraph.cpp  VulkanRenderServer.cpp  VulkanScene.cpp  (+6 more)
src/UI/: BoxWidget.cpp  SpriteWidget.cpp  TextWidget.cpp
tests/: common.glsl  csm_depth.vert  deferred_lighting.frag  fxaa.frag  gbuffer.frag  light.glsl  material.glsl  mesh.frag  mesh.vert  mesh_pcs.glsl  pbr_lighting.glsl  sampler.glsl  scene_data.glsl  shadowmap_depth.frag  shadowmap_depth.vert  skinning.comp  sprite.frag  sprite.vert  toon_shading.glsl  vertex.glsl
tools/common/: fancy.hpp
tools/hako-ify/: CMakeLists.txt  hako.hpp  main.cpp  metadata.hexpat
(+18 files in other folders)
